Fix bug (add Stirling approximation)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# How to ignore a folder in GitHub Desktop
+# https://wpguru.co.uk/2020/09/how-to-ignore-a-folder-in-github-desktop/
 Gallagheretal_Code
 raster-data
 raster-data.zip
